--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <img src="image 1.png" alt="logo" srcset="">
+    <ul>
+        <li>Inicio</li>
+        <li>projeto</li>
+    </ul>
     
 </body>
 </html>
