--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="image 1.png" alt="logo" srcset="">
     <ul>
         <li>Inicio</li>
-        <li>projeto</li>
+        <li>Projeto</li>
     </ul>
     
 </body>
